# postcard-rpc-embassy-trace

./: README.md
app/: Cargo.toml
app/src/: lib.rs
icd/: Cargo.toml
icd/src/: lib.rs
nrf52840/: Cargo.toml
nrf52840/src/: app.rs  handlers.rs  load.rs  main.rs  trace.rs
results/: non-drs-001.txt  non-drs-002.txt  summary-002.md  yes-drs-001.txt  yes-drs-002.txt
