[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
template-icd = { version = "0.1.0", path = "../icd", features = ["use-std"] }
poststation-sdk = "0.4.1"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
postcard = { version = "1.1.1", features = ["use-std"] }
heapless = { version = "0.8.0", features = ["serde"] }
tikv-jemallocator = "0.6.0"

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false
