[package]
name = "template-nrf52840"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m            = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
embassy-nrf         = { version = "0.3.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-sync        = { version = "0.6.1", features = ["defmt"] }
embassy-time        = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb         = { version = "0.4.0", features = ["defmt"] }
panic-probe         = { version = "0.3",   features = ["print-defmt"] }
postcard-rpc        = { version = "0.11.0",   features = ["embassy-usb-0_4-server"] }
postcard            = { version = "1.1.0" }
postcard-schema     = { version = "0.2.0", features = ["derive"] }
portable-atomic     = { version = "1.6.0", features = ["critical-section"] }
cortex-m-rt         = "0.7.0"
defmt               = "0.3"
defmt-rtt           = "0.4"
static_cell         = "2.1"
template-icd        = { path = "../icd" }
bbq2 = { version = "0.1.0", default-features = false, features = ["cas-atomics", "maitake-sync-0_2"] }
embassy-futures = "0.1"
critical-section = "1.2.0"
maitake-sync = { version = "0.2.1", default-features = false, features = ["critical-section"] }
heapless = "0.8"
grounded = "0.2.0"

[dependencies.embassy-executor]
version = "0.7.0"
features = [
    "task-arena-size-131072",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "trace",
]

[features]
default = []
drs-scheduler = ["embassy-executor/drs-scheduler"]

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false

[patch.crates-io]
embassy-executor    = { git = "https://github.com/jamesmunns/embassy", rev = "c69d99f23ad410a9a031e23d63e8e48a3517e3ce" }
embassy-time-driver = { git = "https://github.com/jamesmunns/embassy", rev = "c69d99f23ad410a9a031e23d63e8e48a3517e3ce" }
embassy-time        = { git = "https://github.com/jamesmunns/embassy", rev = "c69d99f23ad410a9a031e23d63e8e48a3517e3ce" }
embassy-nrf         = { git = "https://github.com/jamesmunns/embassy", rev = "c69d99f23ad410a9a031e23d63e8e48a3517e3ce" }
embassy-usb         = { git = "https://github.com/jamesmunns/embassy", rev = "c69d99f23ad410a9a031e23d63e8e48a3517e3ce" }
embassy-usb-driver  = { git = "https://github.com/jamesmunns/embassy", rev = "c69d99f23ad410a9a031e23d63e8e48a3517e3ce" }
embassy-sync        = { git = "https://github.com/jamesmunns/embassy", rev = "c69d99f23ad410a9a031e23d63e8e48a3517e3ce" }
embassy-futures     = { git = "https://github.com/jamesmunns/embassy", rev = "c69d99f23ad410a9a031e23d63e8e48a3517e3ce" }
postcard-rpc        = { git = "https://github.com/jamesmunns/postcard-rpc", rev = "06db164106abbf72a38ce4277f46c537ce8140b7" }
